--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "sequelize-cli": "^6.6.5",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
