--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -5,6 +5,11 @@ services:
       dockerfile: dockerfile
     ports:
       - "3333:3333"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=database_development
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - ./src:/app/src
       - ./package.json:/app/package.json
@@ -20,10 +25,11 @@ services:
   db:
     image: postgres:16-alpine
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - "${POSTGRES_PORT}:5432"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=database_development
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
