--- a/api/package.json
+++ b/api/package.json
@@ -8,15 +8,18 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
+    "@hono/node-ws": "^1.3.0",
     "dotenv": "^17.2.4",
     "hono": "^4.11.9",
     "pg": "^8.18.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "ws": "^8.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/ws": "^8.18.1",
     "sequelize-cli": "^6.6.5",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
