--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     ports:
       - "3333:3333"
     environment:
+      - NODE_ENV=development
       - DB_HOST=db
+      - DB_PORT=5432
       - DB_NAME=database_development
-      - DB_USER=${POSTGRES_USER}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_USER=${DB_USER:-root}
+      - DB_PASSWORD=${DB_PASSWORD:-12345678A@}
     volumes:
       - ./src:/app/src
       - ./package.json:/app/package.json
@@ -25,10 +27,10 @@ services:
   db:
     image: postgres:16-alpine
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "${DB_PORT:-5432}:5432"
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${DB_USER:-root}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-12345678A@}
       - POSTGRES_DB=database_development
     volumes:
       - postgres_data:/var/lib/postgresql/data
