--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,9 +10,8 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src"],
+  "include": ["src", "models"],
   "exclude": ["node_modules"]
 }
