--- a/web/docker/dockerfile
+++ b/web/docker/dockerfile
@@ -22,6 +22,12 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_ENV=production
 
+# Variáveis de ambiente para o build (NEXT_PUBLIC_ são embedded no client)
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_WS_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_WS_URL=$NEXT_PUBLIC_WS_URL
+
 RUN npm run build
 
 # Stage 3: Imagem de produção
